[package]
name = "findal"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "shell-execute", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.5"
dashmap = "5.1"
tokio = { version = "1", features = ["full"] }
showfile = "0.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
